Fix links lists with metadata to wrap the metadata in the link, make the link display block

--- a/styleguide/source/_patterns/01-molecules/08-lists/00-list_links/_list_links.scss
+++ b/styleguide/source/_patterns/01-molecules/08-lists/00-list_links/_list_links.scss
@@ -7,6 +7,10 @@
 .list_links_item {
   @extend %b1;
   margin-bottom: 9px;
+  
+  a {
+    display: block;
+  }
 }
 
 .list_links-rule {
